--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,52 @@
+altair==5.4.1
+attrs==24.2.0
+bcrypt==4.2.0
+blinker==1.8.2
+branca==0.7.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+folium==0.17.0
+geopandas==1.0.1
+gitdb==4.0.11
+GitPython==3.1.41
+idna==3.8
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+narwhals==1.6.2
+numpy==2.1.1
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+protobuf==5.28.0
+pyarrow==17.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+pyogrio==0.9.0
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+referencing==0.35.1
+requests==2.32.3
+rich==13.8.0
+rpds-py==0.20.0
+shapely==2.0.6
+six==1.16.0
+smmap==5.0.1
+streamlit==1.38.0
+streamlit_folium==0.22.0
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+watchdog==4.0.2
+xyzservices==2024.9.0
+
 
